--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">40dp</dimen>
-    <dimen name="activity_vertical_margin">40dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">40sp</dimen>
+    <dimen name="activity_vertical_margin">40sp</dimen>
+    <dimen name="fab_margin">16sp</dimen>
+    <dimen name="champ_margin">10sp</dimen>
+    <dimen name="champ_padding">10sp</dimen>
+    <dimen name="champ_margin_next">30sp</dimen>
 </resources>
