--- a/app/src/main/res/drawable/back.xml
+++ b/app/src/main/res/drawable/back.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-        <solid android:color="#FFFFFF" />
-        <corners android:radius="5dp" />
-        <stroke android:width="1dip" android:color="@color/inputColor"/>
+        <solid
+            android:color="#FFFFFF" />
+        <corners
+            android:radius="5dp" />
+        <stroke
+            android:width="1dip"
+            android:color="@color/inputColor"/>
     </shape>
