--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,99 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_home" tools:context=".home">
 
-
-    <ImageView
-        android:id="@+id/jobIcon_img"
-        android:layout_width="22sp"
-        android:layout_height="22sp"
-        android:layout_marginRight="10sp"
-        android:src="@drawable/ic_jobsearch"
-        android:layout_marginBottom="@dimen/champ_margin"/>
-    <TextView
-        android:id="@+id/job_search_textview"
-        android:text="@string/job_search_textview_text"
-        android:fontFamily="sans-serif-light"
-        android:textSize="18sp"
+    <RelativeLayout
+        android:id="@+id/toolbar_custom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2sp"
-        android:layout_toEndOf="@id/jobIcon_img"
-        android:layout_toRightOf="@id/jobIcon_img"/>
-    <EditText
-        android:id="@+id/job_search_edittext"
-        android:text="@string/job_search_edittext_text"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif-light"
-        android:textStyle="italic"
-        android:textColor="@color/inputColor"
-        android:paddingTop="@dimen/champ_padding"
-        android:paddingRight="@dimen/champ_padding"
-        android:paddingBottom="@dimen/champ_padding"
-        android:paddingLeft="@dimen/champ_padding"
-        android:background="@drawable/back"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/jobIcon_img"
-        android:layout_marginBottom="@dimen/champ_margin_next"/>
-    <ImageView
-        android:id="@+id/cityIcon_img"
-        android:layout_width="22sp"
-        android:layout_height="22sp"
-        android:layout_marginRight="10sp"
-        android:src="@drawable/ic_citysearch"
-        android:layout_marginBottom="@dimen/champ_margin"
-        android:layout_below="@id/job_search_edittext"/>
-    <TextView
-        android:id="@+id/city_search_textview"
-        android:text="@string/city_search_textview_text"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif-light"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:text="@string/title_toolbar"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:textColor="@android:color/white"
+            android:paddingTop="20sp"
+            android:paddingBottom="20sp"
+            android:paddingLeft="40sp"/>
+        <ImageView
+            android:id="@+id/back_arrow"
+            android:layout_width="22sp"
+            android:layout_height="22sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_back"
+            android:layout_marginBottom="@dimen/champ_margin" />
+
+    </RelativeLayout>
+
+
+    
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2sp"
-        android:layout_below="@id/job_search_edittext"
-        android:layout_toEndOf="@id/cityIcon_img"
-        android:layout_toRightOf="@id/cityIcon_img"/>
-    <EditText
-        android:id="@+id/city_search_edittext"
-        android:text="@string/city_search_edittext_text"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif-light"
-        android:textStyle="italic"
-        android:textColor="@color/inputColor"
-        android:paddingTop="@dimen/champ_padding"
-        android:paddingRight="@dimen/champ_padding"
-        android:paddingBottom="@dimen/champ_padding"
-        android:paddingLeft="@dimen/champ_padding"
-        android:background="@drawable/back"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cityIcon_img"
-        android:layout_marginBottom="@dimen/champ_margin_next"/>
-    <CheckBox
-        android:id="@+id/convention_checkbox"
-        android:text="@string/convention_checkbox_text"
-        android:textColor="@color/checkboxColor_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="70sp"
-        android:layout_below="@id/city_search_edittext"/>
-    <Button
-        android:id="@+id/search_button"
-        android:background="@drawable/back_button"
-        android:text="@string/search_button_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textColor="@android:color/white"
-        android:layout_below="@id/convention_checkbox"/>
-
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:layout_below="@+id/toolbar_custom">
+        <ImageView
+            android:id="@+id/jobIcon_img"
+            android:layout_width="22sp"
+            android:layout_height="22sp"
+            android:layout_marginRight="10sp"
+            android:src="@drawable/ic_jobsearch"
+            android:layout_marginBottom="@dimen/champ_margin"/>
+        <TextView
+            android:id="@+id/job_search_textview"
+            android:text="@string/job_search_textview_text"
+            android:fontFamily="sans-serif-light"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2sp"
+            android:layout_toEndOf="@id/jobIcon_img"
+            android:layout_toRightOf="@id/jobIcon_img"/>
+        <EditText
+            android:id="@+id/job_search_edittext"
+            android:text="@string/job_search_edittext_text"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-light"
+            android:textStyle="italic"
+            android:textColor="@color/inputColor"
+            android:paddingTop="@dimen/champ_padding"
+            android:paddingRight="@dimen/champ_padding"
+            android:paddingBottom="@dimen/champ_padding"
+            android:paddingLeft="@dimen/champ_padding"
+            android:background="@drawable/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/jobIcon_img"
+            android:layout_marginBottom="@dimen/champ_margin_next"/>
+        <ImageView
+            android:id="@+id/cityIcon_img"
+            android:layout_width="22sp"
+            android:layout_height="22sp"
+            android:layout_marginRight="10sp"
+            android:src="@drawable/ic_citysearch"
+            android:layout_marginBottom="@dimen/champ_margin"
+            android:layout_below="@id/job_search_edittext"/>
+        <TextView
+            android:id="@+id/city_search_textview"
+            android:text="@string/city_search_textview_text"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-light"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2sp"
+            android:layout_below="@id/job_search_edittext"
+            android:layout_toEndOf="@id/cityIcon_img"
+            android:layout_toRightOf="@id/cityIcon_img"/>
+        <EditText
+            android:id="@+id/city_search_edittext"
+            android:text="@string/city_search_edittext_text"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-light"
+            android:textStyle="italic"
+            android:textColor="@color/inputColor"
+            android:paddingTop="@dimen/champ_padding"
+            android:paddingRight="@dimen/champ_padding"
+            android:paddingBottom="@dimen/champ_padding"
+            android:paddingLeft="@dimen/champ_padding"
+            android:background="@drawable/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cityIcon_img"
+            android:layout_marginBottom="@dimen/champ_margin_next"/>
+        <CheckBox
+            android:id="@+id/convention_checkbox"
+            android:text="@string/convention_checkbox_text"
+            android:textColor="@color/checkboxColor_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="70sp"
+            android:layout_below="@id/city_search_edittext"/>
+        <Button
+            android:id="@+id/search_button"
+            android:background="@drawable/back_button"
+            android:text="@string/search_button_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/white"
+            android:layout_below="@id/convention_checkbox"/>
+    </RelativeLayout>
 </RelativeLayout>
