--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -38,7 +38,7 @@
     </RelativeLayout>
 
 
-    
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,7 +51,8 @@
             android:layout_height="22sp"
             android:layout_marginRight="10sp"
             android:src="@drawable/ic_jobsearch"
-            android:layout_marginBottom="@dimen/champ_margin"/>
+            android:layout_marginBottom="@dimen/champ_margin"
+            />
         <TextView
             android:id="@+id/job_search_textview"
             android:text="@string/job_search_textview_text"
